[package]
name = "raindrops-game"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "raindrops_game"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.17.0"
anchor-spl = "0.17.0"
arrayref = "0.3.6"
spl-associated-token-account = { version="1.0.3", features = [ "no-entrypoint" ] }
spl-token = { version="3.1.1", features = [ "no-entrypoint" ] }
metaplex-token-metadata = { version="0.0.1", features = [ "no-entrypoint" ] }
raindrops-player = { path = "../../../raindrops/rust/player",  features = [ "no-entrypoint" ] }
raindrops-game = { path = "../../../raindrops/rust/game",  features = [ "no-entrypoint" ] }
raindrops-namespace = { path = "../../../raindrops/rust/namespace",  features = [ "no-entrypoint" ] }
raindrops-matches = { path = "../../../raindrops/rust/matches",  features = [ "no-entrypoint" ] }
raindrops-item = { path = "../../../raindrops/rust/item",  features = [ "no-entrypoint" ] }
